Parsing {% INCLUDE '' %} added to TemplateParser

--- a/WebServer/WebServer.csproj
+++ b/WebServer/WebServer.csproj
@@ -57,6 +57,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="header.html" />
     <Content Include="index.html" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
