--- a/WebServer/WebServer.csproj
+++ b/WebServer/WebServer.csproj
@@ -84,5 +84,14 @@
   <ItemGroup>
     <EmbeddedResource Include="Resources\Lock-Unlock-icon.png" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\Shell-run-icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\cmdline.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\jquery-3.6.0.min.js" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
